kubernetes/apps/matrix/livekit/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: livekit
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 405"]
spec:
  hostnames:
    - livekit.erwanleboucher.dev
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sfu/get
        - path:
            type: PathPrefix
            value: /healthz
        - path:
            type: PathPrefix
            value: /get_token
      backendRefs:
        - name: lk-jwt-service
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: livekit
          port: 7880
